<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/child_margin_top">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reset_pw_hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_token"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_email"
        android:layout_marginTop="@dimen/child_margin_top">

        <EditText
            android:id="@+id/et_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reset_pw_hint_token"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ti_password"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_token"
        android:layout_marginTop="@dimen/child_margin_top"
        app:passwordToggleTint="@android:color/black">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reset_pw_hint_new_pw"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ti_password"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_pw_hint_reset_pw"
        android:layout_marginTop="@dimen/button_margin"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"/>


    <TextView
        android:id="@+id/tv_message"
        android:visibility="gone"
        android:layout_below="@+id/btn_reset_password"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_marginBottom="@dimen/button_margin"
        android:indeterminate="true"
        android:layout_below="@+id/tv_message"/>

</RelativeLayout>
